fixing the alignment by removing flex and space-around

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -223,9 +223,8 @@ height: 315px;
 
   .colorCards-card{display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    display: flex;
   align-items: center;}
+  
   .color-first{padding: 10px 40px; background-color: #191b1a;}
   .color-first p{color: white;}
   .color-second{padding: 10px 40px; background-color: whitesmoke;}
